--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -277,6 +277,10 @@
     .form-body{
         width: 90%;
     }
+
+    .form-body textarea, .author-input,.biography-input{
+        width: 85%;
+    }
 }
 
 @media screen and (max-width:500px){
