--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,10 +41,11 @@
       </div>
     <% end %>
 
-    <br><br><br>
-    <h2 class="user-edit-cancel-title">アカウント削除</h2>
-
-    <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "user-cancel-btn user-btn" %>
+    <% if current_user.id!=1 %>
+      <br><br><br>
+      <h2 class="user-edit-cancel-title">アカウント削除</h2>
+      <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "user-cancel-btn user-btn" %>
+    <% end %>
 
     <%= link_to "戻る", :back , class: "links"%>
   </div>
