--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
                 <td><%= user.id%></td>
                 <td><%= user.username%></td>
                 <td><%= user.email%></td>
-                <% if user.sign_in_count!=nil %>
+                <% if user.current_sign_in_at!=nil %>
                   <td><%= user.sign_in_count%></td>
                   <td><%= user.current_sign_in_at.strftime("%Y-%m-%d %H:%M")%></td>
                   <td><%= user.last_sign_in_at.strftime("%Y-%m-%d %H:%M")%></td>
