--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -251,6 +251,36 @@
     border-bottom:solid 2px orange;
 }
 /*レスポンシブ--------------------------------------------------------------------------*/
+@media screen and (max-width:1025px){
+    /*画面幅が1025px以下の時*/
+    .contents-right a:hover::after{
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: orange;
+        opacity: 0;
+        visibility: hidden;
+        transition: .3s;
+    }
+
+    .post-btn:hover{
+        margin-top:2%;
+        width: 40%;
+        float:right;
+        font-size:20px;
+        padding: 0.3em 1em;
+        text-decoration: none;
+        color: #996300;
+        border: solid 2px #996300;
+        background: white;
+        border-radius: 3px;
+        transition: .4s;
+    }
+}
+
 @media screen and (max-width:780px){
     /*画面幅が780px以下の時*/
     .post-title{
