--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -132,10 +132,39 @@
     transform: scale(1, 1);
 }
 /*レスポンシブ----------------------------------------------------------------------------------------------*/
-@media screen and (max-width:1060px){
-    /*画面幅が1000px以下の時*/
+@media screen and (max-width:1025px){
+    /*画面幅が1025px以下の時*/
     .user-form{
         width: 50%;
+    }
+
+    .user-btn:hover{
+        margin-left:5%;
+        margin-right:5%;
+        margin-top:5%;
+        width: 90%;
+        float:right;
+        font-size:15px;
+        padding: 0.3em 1em;
+        text-decoration: none;
+        color: #996300;
+        border: solid 2px #996300;
+        background: white;
+        border-radius: 3px;
+        transition: .4s;
+    }
+
+    .links:hover::after {
+        position: absolute;
+        bottom: -4px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: white;
+        transform: scale(0, 1);
+        transform-origin: center top;
+        transition: transform .3s;
     }
 }
 
